test_src/compiler_errors/types/boolean/LessThanOrEqualToBoolError1.b
class LessThanOrEqualToBoolError1 {
    void test() {
        println(1 <= false);
    }
}
